# xETL

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
core/: runner.py  utils.py
mETL/: __init__.py  __main__.py  engine.py  logging.py  runner.py
mETL/core/: logging.py  runner.py
mETL/core/models/: app.py  step.py  transform.py  utils.py
mETL/models/: app.py  step.py  transform.py  utils.py
mETL/models/utils/: dicts.py  io.py
mETL/transforms/load-csv/: README.md  load_csv.py  manifest.yml  postgres_loader.py  sqlite_loader.py
mETL/transforms/load-csv/tests/: test_postgres_loader.py
mETL/utils/: options_parser.py
tests/: conftest.py  test_argparser.py  test_end_to_end.py  test_engine.py  test_logging.py  test_runner.py
tests/core/: conftest.py  test_logging.py  test_runner.py
tests/core/models/: test_app.py  test_transform.py
tests/fixtures/tasks/download/: manifest.yml
tests/fixtures/tasks/parser/: manifest.yml
tests/fixtures/tasks/splitter/: manifest.yml
tests/models/: conftest.py  test_app.py  test_command.py  test_job.py  test_task.py  test_transform.py
transforms/load-csv/: core_sql.py  load_csv.py  loader.py  manifest.yml
transforms/load-csv/tests/: conftest.py  test_postgres_loader.py
xetl/: Dockerfile  __init__.py  __main__.py  argparse.py  engine.py  logging.py
xetl/models/: __init__.py  app.py  command.py  job.py  step.py  task.py  task_input_details.py  task_test_case.py  transform.py
xetl/models/utils/: dicts.py  run.py
(+11 files in other folders)
